fixedspacing

--- a/css/style.css
+++ b/css/style.css
@@ -71,11 +71,17 @@ ul li {
 
 a {
   color: #6070e6;
+  font-weight: 400;
+}
+
+.intro ul {
+  list-style: none;
+  padding: 0;
 }
 
 #show-me {
   position: absolute;
-  width: 85%;
+  width: 80%;
   bottom: 68vh;
   left: 7.5%;
   z-index: 2;
@@ -109,9 +115,9 @@ a {
 .swiper-textbox {
   position: relative;
   top: 34vh;
-  margin: 0 auto;
-  max-width: 85%;
-  overflow: hidden;
+  margin: 0;
+  left: 7.5%;
+  width: 80%;
 }
 .swiper-textbox h1 {
   font-size: clamp(1.5em, 7vw, 5em);
@@ -151,7 +157,7 @@ body {
 
 .container {
   margin: 0 auto;
-  max-width: 85%;
+  max-width: 80%;
   padding: 0;
 }
 
@@ -187,8 +193,7 @@ footer h3.sectionhead {
 header {
   position: absolute;
   z-index: 2;
-  left: 4em;
-  width: 85%;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -272,8 +277,8 @@ header a {
 
 #kpc-bottom {
   height: auto;
-  padding: 2em 0 0.5em 0;
-  background-color: #63cadf;
+  padding: 2em 0 1em 0;
+  background-color: #ff6e6d;
 }
 #kpc-bottom h4 {
   margin: 0;
@@ -295,25 +300,27 @@ header a {
 .card {
   transition: all 0.4s cubic-bezier(0, 0, 0, 1);
   margin: 1%;
+  background-color: white;
 }
 .card img {
   display: block;
+  background-color: white;
 }
 .card .card-info {
   padding: 20px;
-  background-color: white;
 }
 
 .card:hover {
   transition: all 0.4s cubic-bezier(0, 0, 0, 1);
   transform: scale(1.01);
   cursor: pointer;
+  background-color: #0e283d;
 }
 .card:hover h3, .card:hover p {
   color: white;
 }
-.card:hover .card-info {
-  background-color: #0e283d;
+.card:hover img {
+  background-color: white;
 }
 
 @media (min-width: 768px) {
@@ -386,6 +393,10 @@ header a {
     width: 100%;
   }
 
+  .one-eigth {
+    width: 12%;
+  }
+
   .one-fourth {
     width: 24%;
   }
@@ -431,39 +442,80 @@ header a {
     margin-right: auto;
   }
 }
-.case-study .row,
-.case-study .row-reverse {
+.img-row .row,
+.img-row .row-reverse {
   display: flex;
   align-items: center;
 }
 
 /* Buttons */
 a.button {
-  border: 1px solid black;
+  cursor: pointer;
   color: black;
-  background-color: rgba(0, 0, 0, 0);
+  border: 0 solid;
   display: inline-block;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
   padding: 0.75em 1em;
   text-decoration: none;
-  margin: 1em 0 1.5em 0;
+  margin: 1em 1em 1.5em 0;
   font-family: "korolev-rounded", sans-serif;
   font-weight: 700;
   text-transform: uppercase;
-  font-size: 1.5em;
+  font-size: 1.25em;
   letter-spacing: 0.5px;
+  box-shadow: inset 0 0 20px rgba(241, 249, 255, 0);
+  outline: 1px solid;
+  outline-color: black;
+  outline-offset: 0px;
+  text-shadow: none;
+  transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 a.button:hover {
   background-color: rgba(255, 255, 255, 0.3);
+  border: 1px solid;
+  outline-color: rgba(0, 0, 0, 0);
+  outline-offset: 15px;
+  text-shadow: 0.5px 0.5px 1px #ccdae6;
 }
 
 a.button-white {
-  border: 1px solid white;
+  cursor: pointer;
   color: white;
-  background-color: rgba(0, 0, 0, 0);
+  border: 0 solid;
+  display: inline-block;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 0.75em 1em;
+  text-decoration: none;
+  margin: 1em 1em 1.5em 0;
+  font-family: "korolev-rounded", sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 1.25em;
+  letter-spacing: 0.5px;
+  box-shadow: inset 0 0 20px rgba(241, 249, 255, 0);
+  outline: 1px solid;
+  outline-color: white;
+  outline-offset: 0px;
+  text-shadow: none;
+  transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+a.button-white:hover {
+  border: 1px solid;
+  outline-color: rgba(255, 255, 255, 0);
+  outline-offset: 15px;
+  text-shadow: 0.5px 0.5px 1px #ccdae6;
+}
+
+.button-blue {
+  cursor: pointer;
+  color: #63cadf;
+  border: 0 solid;
   display: inline-block;
   width: -webkit-fit-content;
   width: -moz-fit-content;
@@ -474,12 +526,21 @@ a.button-white {
   font-family: "korolev-rounded", sans-serif;
   font-weight: 700;
   text-transform: uppercase;
-  font-size: 1.5em;
+  font-size: 1.25em;
   letter-spacing: 0.5px;
+  box-shadow: inset 0 0 20px rgba(187, 228, 237, 0);
+  outline: 1px solid;
+  outline-color: #63cadf;
+  outline-offset: 0px;
+  text-shadow: none;
+  transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
 }
 
-a.button-white:hover {
-  background-color: rgba(0, 0, 0, 0.021);
+.button-blue:hover {
+  border: 1px solid;
+  outline-color: rgba(99, 202, 223, 0);
+  outline-offset: 15px;
+  text-shadow: 0.5px 0.5px 1px #ccdae6;
 }
 
 /* Swiper Buttons */
