--- a/scss/partials/buttons.scss
+++ b/scss/partials/buttons.scss
@@ -1,28 +1,67 @@
 /* Buttons */
 a.button {
-    border: 1px solid black;
-    color: black;
-    background-color: rgba(0, 0, 0, 0);
-    display: inline-block;
-    width: fit-content;
-    padding: .75em 1em;
-    text-decoration: none;
-    margin: 1em 0 1.5em 0;
-    font-family: $type-heading;
-    font-weight: 700;
-    text-transform: uppercase;
-    font-size: 1.5em;
-    letter-spacing: .5px;
+  cursor: pointer;
+  color: black;
+  border: 0 solid;
+  display: inline-block;
+  width: fit-content;
+  padding: .75em 1em;
+  text-decoration: none;
+  margin: 1em 1em 1.5em 0;
+  font-family: $type-heading;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 1.25em;
+  letter-spacing: .5px;
+  box-shadow: inset 0 0 20px rgba($white-1,0);
+  outline: 1px solid;
+  outline-color: black;
+  outline-offset: 0px;
+  text-shadow: none;
+  transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
   }
-  
+
   a.button:hover {
     background-color: rgba(255, 255, 255, 0.3);
+    border: 1px solid;
+    outline-color: rgba(black,0);
+    outline-offset: 15px;
+    text-shadow: .5px .5px 1px $grey-1; 
   }
 
   a.button-white {
-    border: 1px solid rgb(255, 255, 255);
-    color: rgb(255, 255, 255);
-    background-color: rgba(0, 0, 0, 0);
+    cursor: pointer;
+    color: white;
+    border: 0 solid;
+    display: inline-block;
+    width: fit-content;
+    padding: .75em 1em;
+    text-decoration: none;
+    margin: 1em 1em 1.5em 0;
+    font-family: $type-heading;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 1.25em;
+    letter-spacing: .5px;
+    box-shadow: inset 0 0 20px rgba($white-1,0);
+    outline: 1px solid;
+    outline-color: white;
+    outline-offset: 0px;
+    text-shadow: none;
+    transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+  }
+  
+  a.button-white:hover {
+    border: 1px solid;
+    outline-color: rgba(white,0);
+    outline-offset: 15px;
+    text-shadow: .5px .5px 1px $grey-1; 
+  }
+
+  .button-blue {
+    cursor: pointer;
+    color: $blue;
+    border: 0 solid;
     display: inline-block;
     width: fit-content;
     padding: .75em 1em;
@@ -31,12 +70,21 @@ a.button {
     font-family: $type-heading;
     font-weight: 700;
     text-transform: uppercase;
-    font-size: 1.5em;
+    font-size: 1.25em;
     letter-spacing: .5px;
-  }
+    box-shadow: inset 0 0 20px rgba($blue-lt,0);
+    outline: 1px solid;
+    outline-color: $blue;
+    outline-offset: 0px;
+    text-shadow: none;
+    transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+  } 
   
-  a.button-white:hover {
-    background-color: rgba(0, 0, 0, 0.021);
+  .button-blue:hover {
+    border: 1px solid;
+    outline-color: rgba($blue,0);
+    outline-offset: 15px;
+    text-shadow: .5px .5px 1px $grey-1; 
   }
   
   
@@ -74,5 +122,5 @@ a.button {
     bottom: 3%;
     left: auto;
     right: 10%;
-  }
+    }
   }
