--- a/scss/partials/structure.scss
+++ b/scss/partials/structure.scss
@@ -6,7 +6,7 @@ body {
 
 .container {
   margin: 0 auto;
-  max-width: 85%;
+  max-width: 80%;
   padding: 0;
 } 
 
@@ -35,8 +35,7 @@ footer {
 header {
   position: absolute;
   z-index: 2;
-  left: 4em;
-  width: 85%;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -109,8 +108,8 @@ header a {
 
 #kpc-bottom {
   height: auto;
-  padding: 2em 0 .5em 0;
-  background-color: $blue;
+  padding: 2em 0 1em 0;
+  background-color:#ff6e6d;
   h4 {
     margin: 0;
     color: white;
